<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="library">Медиатека</string>
    <string name="search">Поиск</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="shared_app">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="terms_of_use">Пользовательское соглашение</string>
    <string name="course_link">https://practicum.yandex.ru/android-developer/?from=catalog</string>
    <string name="support_message_text">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="support_message_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="dev_email">bo4kareff.aleks@yandex.ru</string>
    <string name="practicum_offer">https://yandex.ru/legal/practicum_offer/</string>
    <string name="album_cover">Обложка альбома</string>
    <string name="play_now">Воспроизвести</string>
    <string name="separator">*</string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="something_went_wrong">Проблемы со связью\n\nЗагрузка не удалась. Проверьте\nподключение к интернету</string>
    <string name="noConnection">noConnection</string>
    <string name="update">Обновить</string>
    <string name="clear_history">Очистить историю</string>
    <string name="last_search">Вы искали</string>
    <string name="return_btn">Назад</string>
    <string name="track_name">Название композиции</string>
    <string name="artistName">Имя исполнителя</string>
    <string name="to_playlist">Добавить в плейлист</string>
    <string name="to_favorite">Добавить в избранное</string>
    <string name="track_time">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="start_timer">00:00</string>
    <string name="no_favorites">Ваша медиатека пуста</string>
    <string name="no_playlists">Вы не создали\nни одного плейлиста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="favorites">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="name">Название *</string>
    <string name="create">Создать</string>
    <string name="description">Описание</string>
    <string name="complete">Завершить создание плейлиста?</string>
    <string name="warning">Все несохраненные данные будут потеряны</string>
    <string name="close">Завершить</string>
    <string name="cancel">Отмена</string>
    <string name="added">Добавлено в плейлист %1$s</string>
    <string name="already_exist">Трек уже добавлен в плейлист %1$s</string>
    <string name="created_sucks">Плейлист %1$s успешно создан</string>
    <string name="empty_playlist">В этом плейлисте нет списка треков</string>
    <string name="share">Поделиться</string>
    <string name="edit">Редактировать информацию</string>
    <string name="delete">Удалить плейлист</string>
    <string name="nothing_to_share">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="ok1">OK</string>
    <string name="save">Сохранить</string>
    <string name="number_of_tracks">%1$d трек%2$s</string>
    <string name="total_time">%1$d минут%2$s</string>
    <string name="delete_track">Удалить трек</string>
    <string name="do_you_want_to_delete_track">Вы уверены, что хотите удалить трек из плейлиста?</string>
    <string name="zero_minutes">0 минут</string>
    <string name="share_playlist">Поделиться плейлистом</string>
    <string name="do_you_want_to_delete_playlist">Хотите удалить плейлист?</string>
    <string name="no">Нет</string>
    <string name="yes">Да</string>
    <string name="playlist">Плейлист: %1$s</string>


</resources>