<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    style="@style/OtherActivityStyle"
    tools:context=".settings.ui.SettingsFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:elevation="@dimen/value_4"
        app:title="@string/settings"
        android:textColor="@color/dark"
        android:textSize="@dimen/big_size"
        android:textFontWeight="500"
        android:fontFamily="@font/ys_display_medium"
        android:paddingStart="@dimen/value_16"
        style="@style/MyNavigationStyle"/>



    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/themeSwitcher"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/value_16"
        android:paddingEnd="@dimen/value_6"
        android:paddingTop="@dimen/value_21"
        android:paddingBottom="@dimen/value_21"
        android:layout_marginTop="@dimen/value_24"
        android:text="@string/dark_theme"
        android:textFontWeight="400"
        android:fontFamily="@font/ys_display_regular"
        android:textSize="@dimen/small_size"
        style="@style/MyTextStyle"/>



    <FrameLayout
        android:id="@+id/share_btn"
        style="@style/MySetsFrameStyle">

        <TextView
            android:text="@string/shared_app"
            style="@style/MyTextStyle"/>

        <ImageView
            android:src="@drawable/shared"
            style="@style/MyIconStyle"
            android:contentDescription="@string/shared_app"
            />


    </FrameLayout>


    <FrameLayout
        android:id="@+id/support"
        style="@style/MySetsFrameStyle">

        <TextView
            android:text="@string/support"
            style="@style/MyTextStyle"/>

        <ImageView
            android:src="@drawable/support"
            style="@style/MyIconStyle"
            android:contentDescription="@string/support"
            />


    </FrameLayout>


    <FrameLayout
        android:id="@+id/terms_of_use"
        style="@style/MySetsFrameStyle">

        <TextView
            android:text="@string/terms_of_use"
            style="@style/MyTextStyle"/>

        <ImageView
            android:src="@drawable/arrow_forward"
            style="@style/MyIconStyle"
            android:contentDescription="@string/terms_of_use"
            />


    </FrameLayout>


</LinearLayout>