<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/value_24" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/value_24" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/top_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="@dimen/value_56" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottom_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="@dimen/value_20" />

    <ImageButton
        android:id="@+id/menu_button"
        style="@style/PlayerReturn"
        android:layout_width="@dimen/value_48"
        android:layout_height="@dimen/value_48"
        android:layout_marginStart="@dimen/value_4"
        android:layout_marginTop="@dimen/value_4"
        android:background="@null"
        android:contentDescription="@string/return_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/top_guideline"
        app:srcCompat="@drawable/arrow_back"
        />





    <ImageView
        android:id="@+id/cover"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/value_26"
        android:layout_marginBottom="@dimen/value_24"
        android:contentDescription="@string/album_cover"
        android:scaleType="centerCrop"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/right_guideline"
        app:layout_constraintStart_toStartOf="@+id/left_guideline"
        app:layout_constraintTop_toTopOf="@id/top_guideline"
        app:layout_constraintBottom_toTopOf="@id/trackName"
        />

    <TextView
        android:id="@+id/trackName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/value_24"
        style="@style/PlayerTrackNameStyle"
        tools:text="@string/track_name"
        app:layout_constraintEnd_toStartOf="@+id/right_guideline"
        app:layout_constraintStart_toStartOf="@+id/left_guideline"
        app:layout_constraintBottom_toTopOf="@+id/artistName" />

    <TextView
        android:id="@+id/artistName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/value_12"
        style="@style/PlayerArtistNameStyle"
        tools:text="@string/artistName"
        app:layout_constraintEnd_toStartOf="@+id/right_guideline"
        app:layout_constraintStart_toStartOf="@+id/left_guideline"
        app:layout_constraintTop_toBottomOf="@+id/trackName" />

    <ImageButton
        android:id="@+id/toPlayListButton"
        android:contentDescription="@string/to_playlist"
        android:layout_width="@dimen/value_51"
        android:layout_height="@dimen/value_51"
        android:src="@drawable/to_track_list"
        android:layout_marginTop="@dimen/value_54"
        style="@style/MyPlayerButtons"
        app:layout_constraintTop_toBottomOf="@+id/artistName"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        />

    <ImageButton
        android:id="@+id/playButton"
        android:layout_width="@dimen/value_100"
        android:layout_height="@dimen/value_100"
        android:src="@drawable/play"

        android:layout_marginTop="@dimen/value_30"
        android:backgroundTint="@android:color/transparent"
        app:layout_constraintTop_toBottomOf="@+id/artistName"
        app:layout_constraintStart_toEndOf="@id/toPlayListButton"
        app:layout_constraintEnd_toStartOf="@id/toFavoriteButton"
        android:background="@drawable/round_button_transparent"
        android:contentDescription="@string/play_now"
        />

    <ImageButton
        android:id="@+id/toFavoriteButton"
        android:contentDescription="@string/to_favorite"
        android:layout_width="@dimen/value_51"
        android:layout_height="@dimen/value_51"
        android:src="@drawable/to_favorite"
        android:layout_marginTop="@dimen/value_54"
        style="@style/MyPlayerButtons"
        app:layout_constraintEnd_toEndOf="@id/right_guideline"
        app:layout_constraintTop_toBottomOf="@+id/artistName"
        />

    <TextView
        android:id="@+id/timer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/value_4"
        android:layout_marginStart="@dimen/value_130"
        android:layout_marginEnd="@dimen/value_130"
        style="@style/PlayerTimerStyle"
        tools:text="00:00"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="@+id/left_guideline"
        app:layout_constraintEnd_toStartOf="@+id/right_guideline"
        app:layout_constraintTop_toBottomOf="@+id/playButton"

        />





    <TextView
        android:id="@+id/trackTimeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/track_time"
        style="@style/PlayerInfoTitleStyle"
        android:gravity="start"
        android:layout_marginTop="@dimen/value_32"
        app:layout_constraintStart_toStartOf="@+id/left_guideline"
        app:layout_constraintTop_toBottomOf="@+id/timer"
        />

    <TextView
        android:id="@+id/trackTimeValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/PlayerInfoValueStyle"
        android:gravity="end"
        android:layout_marginTop="@dimen/value_32"
        android:text="@string/start_timer"
        app:layout_constraintEnd_toStartOf="@+id/right_guideline"
        app:layout_constraintTop_toBottomOf="@+id/timer" />


    <TextView
        android:id="@+id/albumTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/album"
        style="@style/PlayerInfoTitleStyle"
        android:gravity="start"
        android:layout_marginTop="@dimen/value_16"
        app:layout_constraintStart_toStartOf="@+id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/trackTimeTitle" />

    <TextView
        android:id="@+id/albumValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/PlayerInfoValueStyle"
        android:gravity="end"
        android:layout_marginTop="@dimen/value_16"
        tools:text="Название альбома"
        app:layout_constraintEnd_toStartOf="@+id/right_guideline"
        app:layout_constraintTop_toBottomOf="@id/trackTimeValue" />

    <TextView
        android:id="@+id/yearTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/year"
        style="@style/PlayerInfoTitleStyle"
        android:gravity="start"
        android:layout_marginTop="@dimen/value_16"
        app:layout_constraintStart_toStartOf="@+id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/albumTitle" />

    <TextView
        android:id="@+id/yearValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/PlayerInfoValueStyle"
        android:gravity="end"
        android:layout_marginTop="@dimen/value_16"
        tools:text="0000"
        app:layout_constraintEnd_toStartOf="@+id/right_guideline"
        app:layout_constraintTop_toBottomOf="@id/albumValue" />

    <TextView
        android:id="@+id/genreTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/genre"
        style="@style/PlayerInfoTitleStyle"
        android:gravity="start"
        android:layout_marginTop="@dimen/value_16"
        app:layout_constraintStart_toStartOf="@+id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/yearTitle" />

    <TextView
        android:id="@+id/genreValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/PlayerInfoValueStyle"
        android:gravity="end"
        android:layout_marginTop="@dimen/value_16"
        tools:text="Название жанра"
        app:layout_constraintEnd_toStartOf="@+id/right_guideline"
        app:layout_constraintTop_toBottomOf="@id/yearValue" />

    <TextView
        android:id="@+id/countryTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/country"
        style="@style/PlayerInfoTitleStyle"
        android:gravity="start"
        android:layout_marginTop="@dimen/value_16"
        app:layout_constraintStart_toStartOf="@+id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/genreTitle"
        app:layout_constraintBottom_toTopOf="@id/bottom_guideline"/>

    <TextView
        android:id="@+id/countryValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/PlayerInfoValueStyle"
        android:gravity="end"
        android:layout_marginTop="@dimen/value_16"
        tools:text="Название страны"
        app:layout_constraintEnd_toStartOf="@+id/right_guideline"
        app:layout_constraintTop_toBottomOf="@id/genreValue"
        app:layout_constraintBottom_toTopOf="@id/bottom_guideline"/>






</androidx.constraintlayout.widget.ConstraintLayout>