<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/album_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:contentDescription="@string/album_cover"
        android:paddingBottom="@dimen/value_8"
        android:paddingLeft="@dimen/value_13"
        android:paddingRight="@dimen/value_8"
        android:paddingTop="@dimen/value_8"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1">

        <TextView
            android:id="@+id/trackName"
            style="@style/TrackNameStyle"
            android:ellipsize="end"
            android:maxLines="1"
            android:paddingBottom="@dimen/value_1"
            android:paddingTop="@dimen/value_14"
            tools:text="trackName" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/value_14"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/artistName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="@style/TrackAttributesStyle"
                android:ellipsize="end"
                android:maxLines="1"
                android:layout_weight="1"
                android:gravity="start"
                tools:text="artistName" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/separator"
                android:src="@drawable/separator"
                app:tint="@color/grey" />

            <TextView
                android:id="@+id/trackTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TrackAttributesStyle"
                android:gravity="start"
                android:maxLines="1"
                tools:text="trackTime" />

        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/PlayIconForSearchStyle"
        android:paddingBottom="@dimen/value_19"
        android:paddingRight="@dimen/value_12"
        android:paddingLeft="@dimen/value_8"
        android:paddingTop="@dimen/value_18"
        android:layout_gravity="center|end"
        android:contentDescription="@string/play_now"
        android:src="@drawable/arrow_forward"/>

</LinearLayout>


