<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/OtherActivityStyle"
    tools:context=".player.ui.Player">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/my_toolbar"
        style="@style/MyNavigationStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/value_56"
        android:layout_marginStart="@dimen/value_0"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/arrow_back"
        app:title="@string/new_playlist"
        android:textColor="@color/dark"
        android:textSize="@dimen/big_size"
        android:textFontWeight="500"
        android:fontFamily="@font/ys_display_medium"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/value_24"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/value_24"/>


    <ImageView
        android:id="@+id/playlist_image"
        android:layout_width="@dimen/value_0"
        android:layout_height="@dimen/value_0"
        android:layout_margin="@dimen/value_24"
        android:importantForAccessibility="no"
        android:scaleType="center"
        android:src="@drawable/addimg"
        android:background="@drawable/stroke_iv"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/my_toolbar" />



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/field_playlist_title"
        style="MakerTexteditStyle"
        android:layout_width="0dp"
        android:layout_height="@dimen/value_56"
        android:layout_marginTop="@dimen/value_32"
        android:hint="@string/name"
        app:boxBackgroundMode="outline"
        app:boxStrokeColor="@color/empty_edittext"
        app:boxStrokeWidth="1dp"
        app:boxStrokeWidthFocused="1dp"
        app:hintEnabled="true"
        app:hintTextColor="@color/edittext_selector"
        app:layout_constraintEnd_toStartOf="@id/right_guideline"
        app:layout_constraintStart_toEndOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/playlist_image">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_playlist_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/field_playlist_description"
        style="MakerTexteditStyle"
        android:layout_width="0dp"
        android:layout_height="@dimen/value_56"
        android:layout_marginTop="@dimen/value_16"
        android:hint="@string/description"
        app:boxBackgroundMode="outline"
        app:boxStrokeColor="@color/empty_edittext"
        app:boxStrokeWidth="1dp"
        app:boxStrokeWidthFocused="1dp"
        app:hintEnabled="true"
        app:hintTextColor="@color/edittext_selector"
        app:layout_constraintEnd_toStartOf="@id/right_guideline"
        app:layout_constraintStart_toEndOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/field_playlist_title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_playlist_description"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:imeOptions="actionDone"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_create"
        android:layout_width="0dp"
        android:layout_height="@dimen/value_48"
        android:layout_marginBottom="@dimen/value_24"
        android:backgroundTint="@color/button_create"
        android:enabled="false"
        android:fontFamily="@font/ys_display_medium"
        android:text="@string/create"
        android:textColor="@color/white"
        android:textFontWeight="500"
        android:textSize="@dimen/small_size"
        app:cornerRadius="@dimen/value_8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/right_guideline"
        app:layout_constraintStart_toEndOf="@id/left_guideline" />

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="0dp"
        android:layout_height="@dimen/value_48"
        android:layout_marginBottom="@dimen/value_24"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/right_guideline"
        app:layout_constraintStart_toEndOf="@id/left_guideline" />



</androidx.constraintlayout.widget.ConstraintLayout>